[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/enemies/bosses/electreo pajaro bomba.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/enemy_parry_projectile.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="Animation" id=4]
resource_name = "summon"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 10, 10, 10, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 26.5676

[sub_resource type="CircleShape2D" id=3]
radius = 17.5324

[node name="body" type="RigidBody2D"]
position = Vector2( -1, 0 )
collision_layer = 8
collision_mask = 71
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.49829, 8.98984 )
scale = Vector2( -0.212, 0.208 )
texture = ExtResource( 1 )
flip_h = true

[node name="permanent" type="AnimationPlayer" parent="Sprite"]
anims/summon = SubResource( 4 )

[node name="parry" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 68

[node name="parry_shape" type="CollisionShape2D" parent="parry"]
shape = SubResource( 2 )

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_body_body_entered"]
[connection signal="area_entered" from="parry" to="." method="_on_parry_area_entered"]
[connection signal="body_entered" from="parry" to="." method="_on_parry_body_entered"]
